# paauth

./: .gitignore  auth-deployment.yaml  db_test.py  fixed-deployment.yaml  migration-job-debug-processed.yaml  processed-deployment.yaml  todo.md
auth_service/: .env.example  .env.production  .env.production.example  .env.test  Dockerfile  Dockerfile.prod  README.md  alembic.ini  check_db.py  docker-compose.local-prod-test.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  test_db_conn.py  test_fixes.py
auth_service/.github/workflows/: ci.yml
auth_service/alembic/: env.py
auth_service/docs/: production_deployment.md
auth_service/src/auth_service/: bootstrap.py  config.py  db.py  dependencies.py  logging_config.py  main.py  models.py  rate_limiting.py  security.py  supabase_client.py
auth_service/src/auth_service/crud/: user_crud.py
auth_service/src/auth_service/dependencies/: __init__.py  user_deps.py
auth_service/src/auth_service/models/: __init__.py  app_client.py  app_client_role.py  profile.py  role.py  user_role.py
auth_service/tests/: conftest.py  test_app_client_model.py  test_app_client_role_model.py  test_bootstrap.py  test_db_connection.py  test_email_verification.py  test_health.py  test_profile_crud_operations.py  test_profile_model.py  test_role_model.py  test_supabase_client.py  test_user_role_model.py  utils.py
auth_service/tests/integration/: test_user_auth_routes.py  test_user_registration_endpoint.py
auth_service/tests/unit/: test_security.py
auth_service/tests/utils/: test_bootstrap_fix.py
(+27 files in other folders)
