[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "daniel",email = "danielnwachukwu5738@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "fastapi>=0.101.0,<1.0.0",
  "uvicorn[standard]>=0.22.0,<1.0.0",
  "pydantic>=2.5.0,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "asyncpg>=0.27.0,<1.0.0",
  "greenlet>=3.0.0,<4.0.0",
  "psycopg2-binary>=2.9.5,<3.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "supabase>=2.15.2,<3.0.0",
  "alembic>=1.8.0,<2.0.0",
  "slowapi>=0.1.4,<1.0.0",
]

[project.optional-dependencies]
dev = [
  # Dependencies moved to tool.poetry.group.dev.dependencies
]

[tool.poetry]
packages = [{include = "auth_service", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
black = ">=23.3.0,<24.0.0"
ruff = ">=0.0.278,<1.0.0"
mypy = ">=0.971,<1.0.0"
pre-commit = ">=3.0.0,<4.0.0"
httpx = ">=0.28.1,<1.0.0"
pytest-asyncio = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
